# supabase-parquet

./: README.md  duckdb-wasm-deno.ts  index.ts  package-lock.json  package.json  test.py  test.py.txt  test1.ts  test2.ts  test3.ts  test4.ts  use-faker.js  use-faker2.js  worker.js
rust-parquet/: Cargo.toml
rust-parquet-s3/: Cargo.toml  aug.sql  duck-test.sql  july.sql  june.sql  may.sql  run-duck-test.sh  script.sh
rust-parquet-s3/src/: main.rs
rust-parquet/src/: main.rs
