[package]
name = "data_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
fake = { version = "2.9.2", features = ["chrono"] }
duckdb = { version = "0.10.2", features = ["bundled"] }
rand = "0.8.5"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
aws-config = "0.3.0"
aws-sdk-s3 = "0.3.0"
